修復贊助旁邊兩個圖的顯示錯誤Bug

--- a/blog/themes/reimu/_config.yml
+++ b/blog/themes/reimu/_config.yml
@@ -516,7 +516,7 @@ sponsor:
     ja: コーヒーを買ってください
     pt-BR: Compre-me um café
   icon:
-    url: ../images/alipay.jpg # this path is relative to the css/style.css, so it needs to go up one level to reach the images folder
+    url: '../images/taichi.svg' # this path is relative to the css/style.css, so it needs to go up one level to reach the images folder
     rotate: true
     mask: true # whether to use the images as a mask
   qr:
