--- a/blog/themes/reimu/_config.yml
+++ b/blog/themes/reimu/_config.yml
@@ -153,7 +153,7 @@ i18n:
   enable: true
   type: [page, post]
   generator: [archive, category, tag, index]
-  languages: [en, zh-TW, zh-CN, ja, pt-BR]
+  languages: [en, zh-TW]
 
 ########################################
 # CSS
